Fix: Dragging opens card in new tab on Firefox
 - Firefox needs drag events to be cancelled more than Chrome does
 - Stop firing pageview hit on localhost
 - Tweak draggable style - only apply to top card

--- a/public/global.css
+++ b/public/global.css
@@ -126,7 +126,7 @@ ul.toasts .toast .content {
 	-ms-user-select: none;
 	user-select: none;
 }
-.draggable {
+[draggable="true"] {
 	cursor: move;
 }
 
